# on-ink-integration-tests

./: .gitignore  Makefile  README.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: general-rust.yml
assets/: Attachement 1 Universe of Functions.xlsx  Attachment 2 Initial Analysis List.xlsx  Weight to Fee.md
scripts/: create-test-matrix.py  run-cargo-fmt.sh
test-cases/: Cargo.toml
test-cases/account-id/: Cargo.toml  README.md  lib.rs
test-cases/balance/: Cargo.toml  README.md  lib.rs
test-cases/block-number/: Cargo.toml  README.md  lib.rs
test-cases/block-timestamp/: Cargo.toml  README.md  lib.rs
test-cases/call-runtime/: Cargo.toml  README.md  lib.rs
test-cases/caller/: Cargo.toml  README.md  lib.rs
test-cases/caller-is-origin/: Cargo.toml  README.md  lib.rs
test-cases/caller-is-origin/contract-to-call/: Cargo.toml  lib.rs
test-cases/caller-is-origin/contract_to_call/: Cargo.toml
test-cases/code-hash/: Cargo.toml  README.md  lib.rs
test-cases/code-hash/other-contract/: Cargo.toml
test-cases/code-hash/other_contract/: Cargo.toml
test-cases/code_hash/: Cargo.toml  lib.rs
test-cases/code_hash/other_contract/: lib.rs
test-cases/default-accounts/: Cargo.toml  README.md  lib.rs
test-cases/ecdsa-recover/: Cargo.toml  README.md  lib.rs
test-cases/gas-left/: Cargo.toml  README.md  lib.rs
test-cases/hash-bytes/: Cargo.toml  README.md  lib.rs
test-cases/hash-encoded/: Cargo.toml  README.md  lib.rs
test-cases/instantiate-contract/: Cargo.toml  README.md  lib.rs
test-cases/instantiate-contract/other-contract/: Cargo.toml  lib.rs
test-cases/instantiate-contract/other_contract/: Cargo.toml
test-cases/instantiate-contract2/: Cargo.toml  README.md
test-cases/instantiate-contract2/other_contract/: Cargo.toml
test-cases/invoke-contract/: Cargo.toml  README.md  lib.rs
test-cases/invoke-contract-delegate/: Cargo.toml  README.md  lib.rs
test-cases/invoke-contract-delegate/contract-to-call/: Cargo.toml  lib.rs
test-cases/invoke-contract/contract-to-call/: Cargo.toml
test-cases/invoke-contract/contract_to_call/: lib.rs
test-cases/invoke-contract/original_contract/: Cargo.toml  lib.rs
test-cases/invoke-contract2/: Cargo.toml  README.md  lib.rs
test-cases/invoke-contract2/contract_to_call/: Cargo.toml
test-cases/minimum-balance/: Cargo.toml  README.md  lib.rs
test-cases/own-code-hash/: Cargo.toml  README.md  lib.rs
test-cases/set-code-hash/: Cargo.toml  README.md  lib.rs
test-cases/set-code-hash/contract/: Cargo.toml  lib.rs
test-cases/set-code-hash/contract-replacement/: Cargo.toml
test-cases/set-code-hash/contract_replacement/: Cargo.toml  lib.rs
test-cases/set-code-hash/original_contract/: Cargo.toml  lib.rs
test-cases/set-contract-storage/: Cargo.toml  README.md  lib.rs
test-cases/set_contract_storage/: lib.rs
test-cases/template/: Cargo.toml  README.md  lib.rs
test-cases/terminate-contract/: Cargo.toml  README.md  lib.rs
test-cases/transfer/: Cargo.toml  README.md  lib.rs
test-cases/trasferred-value/: Cargo.toml  README.md  lib.rs
test-cases/weight-to-fee/: Cargo.toml  README.md  lib.rs
