[workspace]
members = ["*"]
exclude = [".cargo", "target", "template", "tmp"]
resolver = "2"

[workspace.dependencies]
ink = { version = "4.3.0", default-features = false }
ink_e2e = "4.3.0"
scale = { package = "parity-scale-codec", version = "=3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
