[package]
name = "caller-is-origin"
version = "0.1.0"
edition = "2021"
authors = ["[your_name] <[your_email]>"]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "caller-is-origin-contract-to-call/std",
]
ink-as-dependency = []
e2e-tests = []

[dependencies]
ink = { workspace = true }
scale = { workspace = true, package = "parity-scale-codec" }
scale-info = { workspace = true, optional = true }

caller-is-origin-contract-to-call = { path = "./contract-to-call", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { workspace = true }
