[package]
name = "instantiate_contract"
version = "0.1.0"
edition = "2021"
authors = ["[your_name] <[your_email]>"]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "instantiate-contract-other-contract/std"
]
ink-as-dependency = []
e2e-tests = []

[dependencies]
ink = { workspace = true }
scale = { workspace = true, package = "parity-scale-codec" }
scale-info = { workspace = true, optional = true }

instantiate-contract-other-contract = { path = "./other-contract", default-features = false, features = [
    "ink-as-dependency",
] }

[dev-dependencies]
ink_e2e = { workspace = true }
