[package]
name = "invoke_contract"
version = "0.1.0"
edition = "2021"
authors = ["[your_name] <[your_email]>"]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "contract_to_call/std",
]
ink-as-dependency = []
e2e-tests = []
test_instantiate = [
    "ink/test_instantiate",
    "contract_to_call/test_instantiate"
]

[dependencies]
#ink = { version = "4.2.1", default-features = false }
ink = { path = "/home/victor/ink_vm/on-ink_implementations/crates/ink", default-features = false }
scale = { package = "parity-scale-codec", version = "=3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
contract_to_call = { path = "./contract_to_call", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
#ink_e2e = "4.2.1"
#ink_e2e = { path = "/home/victor/ink_vm/on-ink_implementations/crates/e2e", default-features = false }

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
