[package]
name = "other_contract"
version = "0.1.0"
edition = "2021"
authors = ["[your_name] <[your_email]>"]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []
test_instantiate = [
    "ink/test_instantiate"
]

[dependencies]
ink = { git = "https://github.com/CoinFabrik/ink-tests", branch = "integration-instantiate_contract", default-features = false }
scale = { package = "parity-scale-codec", version = "=3.6.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
ink_e2e = { git = "https://github.com/CoinFabrik/ink-tests", branch = "integration-instantiate_contract" }

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
